# frida-qml

./: .gitignore  README.md  device.cpp  device.h  devicelistmodel.cpp  devicelistmodel.h  devicemanager.cpp  devicemanager.h  frida-qml.pri  frida-qml.pro  frida-qml.qmltypes  frida-qml.version  frida.cpp  frida.h  frida.qmltypes  iconprovider.cpp  iconprovider.h  maincontext.cpp  maincontext.h  meson.build  plugin.cpp  plugin.h  process.cpp  process.h  processes.cpp  processes.h  processlistmodel.cpp  processlistmodel.h  qmldir  qmldir.in  script.cpp  script.h  scripts.cpp  scripts.h
src/: application.cpp  application.h  applicationlistmodel.cpp  applicationlistmodel.h  device.cpp  device.h  devicelistmodel.cpp  devicelistmodel.h  frida-qml.version  frida.cpp  frida.h  fridafwd.h  generate-qmltypes.py  iconprovider.cpp  iconprovider.h  maincontext.cpp  maincontext.h  meson.build  plugin.cpp  plugin.h  process.cpp  process.h  processlistmodel.cpp  processlistmodel.h  qmldir  script.cpp  script.h  spawnoptions.cpp  spawnoptions.h  variant.cpp  variant.h
tools/: detect-version.py
